2005-11-10  Sven Panne  <sven.panne@aedion.de>

	* ChangeLog, include/AL/alext.h, src/al_ext.c, src/al_filter.c,
	src/al_listen.c, src/al_source.c, test/testchannel.c,
	test/testgain.c, test/testgainlinear.c, test/testmultinothread.c,
	test/testpitch.c, test/testpitch2.c, test/testpitch3.c,
	test/testpitch4.c, test/testpitchnothread.c,
	test/testpitchnothread2.c, test/testqueue.c, test/testqueue2.c,
	test/testqueue3.c, test/testtime.c: The non-standard
	AL_GAIN_LINEAR_LOKI token seems to behave exactly as the standard
	AL_GAIN, at least in the current code base. Therefore the former
	has been deprecated in the extension header and is not used
	internally anymore. Nevertheless, for legacy reasons it is still
	recognized in getters and setters.

2005-11-09  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c, src/al_ext.c, src/al_source.c: Removed
	AL_ILLEGAL_* tokens from implementation.

	* src/al_ext.c, src/al_ext.h: Removed AL_ENV_* tokens, they were
	unused and without any functionality.

2005-11-07  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/irix/iris.c: fix missing alext.h include

2005-11-06  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, config-osx.h, src/al_siteconfig.h: cleaning-up:
	removed unused/obsolete stuff

2005-11-03  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Minor aesthetical changes in alcGetIntegerv.

2005-11-02  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c, src/alc/alc_device.h: Fixed error handling for
	alcGetIntegerv, previously a device was needed even for querying
	ALC_MAJOR_VERSION and ALC_MINOR_VERSION, which was wrong.

2005-10-27  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/alsa/alsa.c: merge Dino Puller's patch for being 
	able to use alsa with dmix

	* configure.ac: make CFLAGS overrideable by user

2005-10-27  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Synched with latest Makefile changes.

2005-10-25  Prakash Punnoor <prakash@punnoor.de>
