@@ -73,7 +73,7 @@ int main( int argc, char *argv[] )
 {
 	ALCdevice *device;
 	int attributeList[] = { ALC_FREQUENCY, 22050,
-		ALC_INVALID
+		0
 	};
 	int i;
 
